# queensgame

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  DEV_NOTES.md  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel  build.bzl  clippy.toml  flake.nix
bazel/extensions/: BUILD.bazel  crate_universe.bzl
bazel/rules/: binaryen_repo.bzl  local_tool_repo.bzl  release.bzl  rust.bzl  rust_image.bzl
crates/client/: BUILD.bazel  Cargo.toml  lib.rs
crates/client/components/: BUILD.bazel  lib.rs
crates/client/components/src/: BUILD.bazel  lib.rs
crates/client/minesweeper/: BUILD.bazel  lib.rs
crates/client/minesweeper/src/: BUILD.bazel  lib.rs
crates/client/mouse/: BUILD.bazel
crates/client/mouse/src/: BUILD.bazel  lib.rs
crates/client/nonogram/: BUILD.bazel  lib.rs
crates/client/queens/: BUILD.bazel  lib.rs
crates/client/routing/: BUILD.bazel  lib.rs
crates/client/src/: BUILD.bazel  lib.rs  room_minesweeper_logic.rs
crates/server/: BUILD.bazel  Cargo.toml  lib.rs  main.rs
crates/server/assets/: BUILD.bazel  lib.rs
crates/server/assets/src/: BUILD.bazel  lib.rs
crates/server/pages/: BUILD.bazel
crates/server/pages/src/: BUILD.bazel  lib.rs
crates/server/puzzles/: BUILD.bazel  lib.rs
crates/server/rooms/: BUILD.bazel  lib.rs
crates/server/rooms/error/: BUILD.bazel  lib.rs
crates/server/rooms/minesweeper/: BUILD.bazel  lib.rs
crates/server/rooms/model/: BUILD.bazel  lib.rs
crates/server/rooms/nonogram/: BUILD.bazel  lib.rs
crates/server/rooms/queens/: BUILD.bazel  lib.rs
crates/server/rooms/service/: BUILD.bazel  lib.rs
crates/server/rooms/snapshot/: BUILD.bazel  lib.rs
crates/server/rooms/web/: BUILD.bazel  lib.rs
crates/server/runtime/: BUILD.bazel  lib.rs
crates/server/runtime/src/: BUILD.bazel  lib.rs
crates/server/src/: BUILD.bazel  main.rs
crates/shared/: BUILD.bazel  Cargo.toml  lib.rs
crates/shared/minesweeper/: BUILD.bazel  lib.rs  solver.rs
crates/shared/minesweeper/src/: lib.rs
crates/shared/nonogram/: BUILD.bazel  lib.rs
crates/shared/queens/: BUILD.bazel  lib.rs
crates/shared/queens/src/: BUILD.bazel  lib.rs
crates/shared/room/: BUILD.bazel  lib.rs
crates/shared/room/src/: BUILD.bazel  lib.rs
crates/shared/room_minesweeper/: BUILD.bazel  lib.rs
crates/shared/src/: BUILD.bazel  lib.rs
data/: 9x9-puzzles.json  BUILD.bazel
scripts/: build_client.sh
src/: main.rs
static/: BUILD.bazel  app.js  style.css
static/fonts/: BUILD.bazel
templates/: puzzle.html  puzzles.html
toolchains/wasm_bindgen/: BUILD.bazel
tools/format/: BUILD.bazel
