package(default_visibility = ["//visibility:public"])

exports_files([
    "clippy.toml",
    "rustfmt.toml",
])

alias(
    name = "client",
    actual = "//crates/client:queensgame_client_bindgen",
)

alias(
    name = "server",
    actual = "//crates/server:queensgame",
)

alias(
    name = "format",
    actual = "//tools/format:format",
)

alias(
    name = "format.check",
    actual = "//tools/format:format.check",
)
