[workspace]
members = [
    "crates/client",
    "crates/server",
    "crates/shared",
]
default-members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dioxus = { version = "0.7.9", default-features = false }
dioxus-ssr = "0.7.9"
gloo-timers = "0.3"
js-sys = "=0.3.98"
queensgame-shared = { path = "crates/shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.121"
web-sys = "=0.3.98"
