module(
    name = "queensgame",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_img", version = "0.3.12")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.70.0")

binaryen_repository = use_repo_rule("//bazel/rules:binaryen_repo.bzl", "binaryen_repository")

binaryen_repository(name = "binaryen")

images = use_extension("@rules_img//img:extensions.bzl", "images")
images.pull(
    name = "distroless_cc_nonroot",
    digest = "sha256:d3cda6e91129130d7229a1806b6a73d292ef245ab032da7851907798024cefba",
    layer_handling = "lazy",
    registry = "gcr.io",
    repository = "distroless/cc",
    tag = "nonroot",
)
use_repo(images, "rules_img_images.bzl")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["wasm32-unknown-unknown"],
    sha256s = {
        "cargo-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "dee75c3c8f9f600ad75bc0c93249e767d3047845a4dd668327ce43ab039ba266",
        "clippy-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "9b0b89c67d5ce8195e1c8733587a63e326353fdda65f62455a64fa03e25659f2",
        "llvm-tools-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "027726611510c2ac5cdf7f0a1fa411f5c78478ed07b9a03fa4178571a645c116",
        "rust-analyzer-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "93d525c882bec3659a8f277e4a0d343853e6832fd131f853f31a3014d82a4c73",
        "rust-src-1.96.0.tar.xz": "7875f9f4b91455ac25e2ea0e0f1cb3d7d16c309ef0720778538d20ed0e9b818b",
        "rust-std-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "c09c7c646248f14f473f5f7a029af15ee57c3a9f9bc93dfa72d9621938586b82",
        "rust-std-1.96.0-wasm32-unknown-unknown.tar.xz": "5a360604f50aaf62320bd2201f6e97113bbdb2a93881c66889dd90cdbaab51a0",
        "rustc-1.96.0-x86_64-unknown-linux-gnu.tar.xz": "7d7fa1d0cfb0fab71a956bb78f41107202c17f30ab56c45288e869a37fd9633d",
    },
    versions = ["1.96.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    version = "nightly",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

wasm_bindgen_cli = use_extension("//bazel/extensions:crate_universe.bzl", "crate")
wasm_bindgen_cli.spec(
    artifact = "bin",
    package = "wasm-bindgen-cli",
    version = "=0.2.121",
)
wasm_bindgen_cli.annotation(
    crate = "wasm-bindgen-cli",
    gen_all_binaries = True,
)
wasm_bindgen_cli.from_specs(
    name = "wasm_bindgen_cli",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(wasm_bindgen_cli, "wasm_bindgen_cli")

register_toolchains("//toolchains/wasm_bindgen:wasm_bindgen_toolchain")
