package(default_visibility = ["//visibility:public"])

filegroup(
    name = "icons",
    srcs = [
        "minesweeper-flag.svg",
        "minesweeper-mine.svg",
        "queen.svg",
    ],
)

filegroup(
    name = "style",
    srcs = ["style.css"],
)

filegroup(
    name = "assets",
    srcs = [
        ":icons",
        ":style",
        "//static/fonts:assets",
    ],
)
