[package]
name = "queensgame-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { workspace = true, features = ["minimal", "web"] }
gloo-timers = { workspace = true, features = ["futures"] }
js-sys.workspace = true
queensgame-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "CloseEvent",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "ErrorEvent",
    "EventTarget",
    "History",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "PointerEvent",
    "Response",
    "RequestInit",
    "Storage",
    "UrlSearchParams",
    "WebSocket",
    "Window",
] }
