[package]
name = "queensgame"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
dioxus = { workspace = true, features = ["html", "macro", "signals"] }
dioxus-ssr.workspace = true
futures-util = "0.3"
nanoid = "0.4"
queensgame-shared.workspace = true
rand = "0.9"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
