load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "queens",
    crate_name = "queensgame_client_queens",
    deps = [
        "//crates/shared/queens:queens",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":queens",
    deps = [
        "//crates/shared/queens:queens",
    ],
)
