load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "routing",
    crate_name = "queensgame_client_routing",
    deps = [
        "//crates/shared/minesweeper:minesweeper",
        "//crates/shared/nonogram:nonogram",
        "//crates/shared/queens:queens",
        "//crates/shared/room:room",
        "@crates//:serde-1.0.228",
        "@crates//:web-sys-0.3.98",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":routing",
    deps = [
        "//crates/shared/minesweeper:minesweeper",
        "//crates/shared/nonogram:nonogram",
        "//crates/shared/queens:queens",
        "//crates/shared/room:room",
        "@crates//:serde-1.0.228",
        "@crates//:web-sys-0.3.98",
    ],
)
