load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen")
load("//bazel/rules:release.bzl", "optimized_wasm_bindgen")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "wasm32",
    constraint_values = ["@platforms//cpu:wasm32"],
)

rust_shared_library(
    name = "queensgame_client_wasm",
    srcs = ["lib.rs"],
    crate_name = "queensgame_client",
    crate_root = "lib.rs",
    edition = "2024",
    target_compatible_with = select({
        ":wasm32": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "//crates/shared/src:queensgame_shared",
        "@crates//:dioxus-0.7.9",
        "@crates//:gloo-timers-0.3.0",
        "@crates//:js-sys-0.3.98",
        "@crates//:serde-1.0.228",
        "@crates//:serde_json-1.0.150",
        "@crates//:wasm-bindgen-0.2.121",
        "@crates//:web-sys-0.3.98",
    ],
)

rust_wasm_bindgen(
    name = "queensgame_client_bindgen",
    out_name = "queensgame_client",
    target = "web",
    wasm_file = ":queensgame_client_wasm",
)

optimized_wasm_bindgen(
    name = "queensgame_client_bindgen_optimized",
    src = ":queensgame_client_bindgen",
    wasm_opt = "@binaryen//:bin/wasm-opt",
)
