load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "wasm32",
    constraint_values = ["@platforms//cpu:wasm32"],
)

rust.shared_library(
    name = "queensgame_client_wasm",
    crate_name = "queensgame_client",
    target_compatible_with = select({
        ":wasm32": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "//crates/client/components/src:components",
        "//crates/client/minesweeper/src:minesweeper",
        "//crates/client/mouse/src:mouse",
        "//crates/shared/minesweeper/src:minesweeper",
        "//crates/shared/queens/src:queens",
        "//crates/shared/room/src:room",
        "//crates/shared/src:queensgame_shared",
        "@crates//:dioxus-0.7.9",
        "@crates//:gloo-timers-0.3.0",
        "@crates//:js-sys-0.3.98",
        "@crates//:serde-1.0.228",
        "@crates//:serde_json-1.0.150",
        "@crates//:wasm-bindgen-0.2.121",
        "@crates//:wasm-bindgen-futures-0.4.71",
        "@crates//:web-sys-0.3.98",
    ],
)

rust.wasm_bindgen(
    name = "queensgame_client_bindgen",
    out_name = "queensgame_client",
    target = "web",
    wasm_file = ":queensgame_client_wasm",
)

rust.optimized_wasm_bindgen(
    name = "queensgame_client_bindgen_optimized",
    src = ":queensgame_client_bindgen",
    wasm_opt = "@binaryen//:bin/wasm-opt",
)
