load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "puzzles",
    crate_name = "queensgame_server_puzzles",
    deps = [
        "//crates/shared/queens:queens",
        "@crates//:rand-0.9.4",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":puzzles",
    deps = [
        "//crates/shared/queens:queens",
        "@crates//:rand-0.9.4",
    ],
)
