load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

COMMON_DEPS = [
    "//crates/server/assets/src:assets",
    "//crates/server/pages/src:pages",
    "//crates/server/runtime/src:runtime",
    "//crates/shared/minesweeper/src:minesweeper",
    "//crates/shared/queens/src:queens",
    "//crates/shared/room/src:room",
    "//crates/shared/src:queensgame_shared",
    "@crates//:axum-0.7.9",
    "@crates//:futures-util-0.3.32",
    "@crates//:nanoid-0.4.0",
    "@crates//:rand-0.9.4",
    "@crates//:serde-1.0.228",
    "@crates//:serde_json-1.0.150",
    "@crates//:tokio-1.52.3",
    "@crates//:tower-http-0.5.2",
    "@crates//:tracing-0.1.44",
    "@crates//:tracing-subscriber-0.3.23",
    "@crates//:urlencoding-2.1.3",
]

rust.binary(
    name = "queensgame",
    data = ["//crates/client/src:queensgame_client_bindgen"],
    deps = COMMON_DEPS,
)

rust.test(
    name = "unit_test",
    deps = COMMON_DEPS,
)

rust.image(
    name = "image",
    binary = ":queensgame",
    binary_path = "/app/bin/queensgame",
    env = {
        "QUEENSGAME_ADDR": "0.0.0.0:3000",
        "QUEENSGAME_CLIENT_DIST": "/app/client",
        "RUST_LOG": "info",
    },
    files = {
        "/app/client": "//crates/client/src:queensgame_client_bindgen_optimized",
    },
    tag = "queensgame:latest",
)
