load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "queens",
    compile_data = ["//data:puzzles"],
    crate_name = "queensgame_shared_queens",
    deps = [
        "@crates//:serde-1.0.228",
        "@crates//:serde_json-1.0.150",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":queens",
)
