load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "components",
    crate_name = "queensgame_client_components",
    deps = [
        "//crates/shared/minesweeper/src:minesweeper",
        "//crates/shared/room/src:room",
        "@crates//:dioxus-0.7.9",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":components",
    deps = [
        "//crates/shared/minesweeper/src:minesweeper",
        "//crates/shared/room/src:room",
        "@crates//:dioxus-0.7.9",
    ],
)
