load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

rust.library(
    name = "minesweeper",
    crate_name = "queensgame_client_minesweeper",
    deps = [
        "//crates/client/components/src:components",
        "//crates/shared/minesweeper/src:minesweeper",
        "@crates//:dioxus-0.7.9",
        "@crates//:gloo-timers-0.3.0",
        "@crates//:js-sys-0.3.98",
    ],
)

rust.test(
    name = "unit_test",
    crate = ":minesweeper",
    deps = [
        "//crates/client/components/src:components",
        "//crates/shared/minesweeper/src:minesweeper",
        "@crates//:dioxus-0.7.9",
        "@crates//:gloo-timers-0.3.0",
        "@crates//:js-sys-0.3.98",
    ],
)
