load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "//crates/server/rooms/model:model",
    "//crates/shared/minesweeper:minesweeper",
    "//crates/shared/room:room",
    "//crates/shared/room_minesweeper:room_minesweeper",
    "//crates/shared:queensgame_shared",
]

rust.library(
    name = "minesweeper",
    crate_name = "queensgame_server_rooms_minesweeper",
    deps = DEPS,
)

rust.test(
    name = "unit_test",
    crate = ":minesweeper",
)
