load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "//crates/shared/minesweeper:minesweeper",
    "//crates/shared/nonogram:nonogram",
    "//crates/shared/queens:queens",
    "//crates/shared/room:room",
    "@crates//:tokio-1.52.3",
]

rust.library(
    name = "model",
    crate_name = "queensgame_server_rooms_model",
    deps = DEPS,
)

rust.test(
    name = "unit_test",
    crate = ":model",
)
