load("//:build.bzl", "rust")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "//crates/server/rooms/model:model",
    "//crates/shared/nonogram:nonogram",
    "//crates/shared/room:room",
]

rust.library(
    name = "nonogram",
    crate_name = "queensgame_server_rooms_nonogram",
    deps = DEPS,
)

rust.test(
    name = "unit_test",
    crate = ":nonogram",
)
